--- a/deployment/helm/templates/secret.yml
+++ b/deployment/helm/templates/secret.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-config
+  name: {{ include "sample-dotnet-app.name" . }}-config
   labels:
     app.kubernetes.io/name: {{ include "sample-dotnet-app.name" . }}
     helm.sh/chart: {{ include "sample-dotnet-app.chart" . }}
