--- a/deployment/helm/templates/service.yaml
+++ b/deployment/helm/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "sample-dotnet-app.fullname" . }}
+  name: {{ include "sample-dotnet-app.name" . }}
   labels:
     app.kubernetes.io/name: {{ include "sample-dotnet-app.name" . }}
     helm.sh/chart: {{ include "sample-dotnet-app.chart" . }}
