--- a/deployment/k8s/deployment.properties
+++ b/deployment/k8s/deployment.properties
@@ -2,7 +2,11 @@
 APP_NAMESPACE=sample-projects
 
 # Fully qualified Image source path
-APP_IMAGE=192.168.99.1:5000/resideo/sample-dotnet-app
+APP_IMAGE=saharshsingh/sample-dotnet-app:latest
+
+# Networking
+APP_SERVICE_TYPE=ClusterIP
+APP_INGRESS_HOST=sample-dotnet-app-sample-projects.192.168.99.100.nip.io
 
 # App environment variables
 APP_ENV_VALUES_SERVICE_TYPE=simple
