--- a/sample-dotnet-app/Dockerfile
+++ b/sample-dotnet-app/Dockerfile
@@ -1,7 +1,14 @@
+FROM microsoft/dotnet:2.2-sdk AS build
+
+COPY . /build
+WORKDIR /build
+
+RUN dotnet publish -c Release -o out
+
 FROM microsoft/dotnet:2.2-aspnetcore-runtime
 
 WORKDIR /app
-COPY out .
+COPY --from=build /build/out .
 
 ENV ASPNETCORE_URLS "http://*:8080"
 EXPOSE 8080
