Fix Ingress manifest to work with new Kubernetes API

--- a/deployment/helm-k8s/templates/ingress.yaml
+++ b/deployment/helm-k8s/templates/ingress.yaml
@@ -1,18 +1,38 @@
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" -}}
+apiVersion: networking.k8s.io/v1
+{{- else if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1/Ingress" -}}
+apiVersion: networking.k8s.io/v1beta1
+{{- else -}}
 apiVersion: extensions/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
   name: {{ include "app.name" . }}
+  annotations:
   labels:
     app.kubernetes.io/name: {{ include "app.name" . }}
     helm.sh/chart: {{ include "app.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
+  {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
+  ingressClassName: nginx
+  {{- end }}
   rules:
   - host: {{ .Values.ingress.host }}
     http:
       paths:
       - path: /
+        {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
+        pathType: ImplementationSpecific
+        {{- end}}
         backend:
+        {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
+          service:
+            name: {{ include "app.name" . }}
+            port:
+              number: {{ .Values.service.port }}
+        {{- else }}
           serviceName: {{ include "app.name" . }}
           servicePort: {{ .Values.service.port }}
+        {{- end }}
